force-app/main/default/objects/EYI_Quotation_Section_Setting__mdt/EYI_Quotation_Section_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Quotation Section Setting</label>
    <pluralLabel>Quotation Section Setting</pluralLabel>
</CustomObject>