force-app/main/default/objects/EYI_Quotation_Section_Setting__mdt/fields/Distrubution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distrubution_Channel__c</fullName>
    <label>Distrubution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Residential</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>