force-app/main/default/objects/EYI_Quotation_Section_Setting__mdt/fields/Main_Section__c.field-meta.xml
<CustomField>
    <fullName>Main_Section__c</fullName>
    <label>Main Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>Infrastructure Charges</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>