force-app/main/default/objects/EYI_Quotation_Section_Setting__mdt/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <default>true</default>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>