force-app/main/default/objects/EYI_Quotation_Section_Setting__mdt/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <label>Sub Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infra Charges</fullName>
                <default>true</default>
                <label>Infra Charges</label>
            </value>
            <value>
                <fullName>Base Price</fullName>
            </value>
            <value>
                <fullName>Brokerage Additional</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>Land Cost</fullName>
            </value>
            <value>
                <fullName>2 Wheeler Charges</fullName>
            </value>
            <value>
                <fullName>Base Price-Booking</fullName>
            </value>
            <value>
                <fullName>MSEB Charges</fullName>
            </value>
            <value>
                <fullName>Earmarked Car park</fullName>
            </value>
            <value>
                <fullName>Additional Car park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>